--- a/styles-espresso-cafe/contact.css
+++ b/styles-espresso-cafe/contact.css
@@ -1,23 +1,52 @@
-.contact-icon {
-  color: #a5a29f;
-  font-size: 5rem;
+
+.contactanos {
+  position: relative;
+  padding: 40px;
+  color: whitesmoke;
+  max-height: 100vh;
+  font-size: 30px;
+  overflow: hidden;
+  z-index: 1;
+  font-family: poppins, sans-serif;
 }
 
-.icon-label {
-  font-family: "Poppins";
-  color: #133936;
-  font-weight: bold;
-  font-size: 1.4rem;
+.contactanos::before {
+content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/assets/granosDeCafe.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: blur(1.5px) brightness(0.6);         
+  opacity: 0.90;               
+  z-index: -1;
+}
+form{
+  padding: 40px;
+
 }
 
-.business-name {
-  font-family: "Poppins";
-  color: #998F76;
-  font-size: 1.2rem;
-  text-decoration: underline;
+.form-group label{
+  display: block;
+  font-size: 15px;
+  margin-bottom: 3px;
+  font-family: poppins, sans-serif;
+  text-align: left;
 }
-
-
-.map-espresso {
-  border-radius: 2rem;
+.form-group input{
+  width: 320px;
+  padding: 4px;
+  font-size: 15px;
+  color:#333;
+  font-family: poppins, sans-serif;
+  border-radius: 50px;
+  text-align: center;
+  margin-bottom: 4px;
 }
+input.invalid{
+  border: 2px solid red;
+};
