--- a/styles.css
+++ b/styles.css
@@ -41,18 +41,30 @@ img {
   transform: scale(1.10);
 }
 
-.cart-icon {
-  color: #FFFFFF;
-  width: 2.5rem;
-  transition: all 0.3s ease;
-  background-color: transparent;
+.cart-icon-container {
+  border: 2px solid #FFFFFF; 
+  border-radius: 50%;        
+  padding: 8px;              
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: border-color 0.3s ease, background-color 0.3s ease, transform 0.3s ease;
+  width: 40px;              
+  height: 40px;             
 }
 
-.cart-icon:hover {
-  color: #A2845E;
-  transform: rotate(360deg) scale(1.2);
-  cursor: pointer;
+.cart-icon {
+  color: #FFFFFF;
+  width: 20px;
+  height: 20px;
 }
+
+.cart-icon-container:hover {
+  border-color: #A2845E; 
+  background-color: rgba(255, 255, 255, 0.15); /*Efecto glass*/
+  transform: scale(1.15);     
+}
+
 
 .btn-login {
   background-color: #A2845E;
@@ -72,6 +84,13 @@ img {
   cursor: pointer;
   box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
   animation: pulse 1s infinite;
+}
+
+.navbar-toggler{
+  border-color: #FFFFFF;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23A2845E' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255,255,255,0.8)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
 /*!!!!!!!!!!!!!!!!!!!! Títulos y textos */
