--- a/styles-espresso-cafe/contact.css
+++ b/styles-espresso-cafe/contact.css
@@ -21,3 +21,83 @@
 .map-espresso {
   border-radius: 2rem;
 }
+
+/* Formulario principal */
+.contact-form {
+  background-color: #ffffff;
+  border-radius: 2rem;
+  padding: 2rem;
+  width: 100%;
+  max-width: 643px;
+  height: 100%;
+  max-height: 1086px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Títulos */
+.contact-subtitle {
+  font-family: "Poppins";
+  font-size: 1.2rem;
+  color: #133936;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.contact-title {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: #133936;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+/* Etiquetas */
+.contact-label {
+  display: block;
+  font-family: "Poppins", sans-serif;
+  color: #133936;
+  font-weight: 600;
+  margin-bottom: 0.3rem;
+}
+
+/* Inputs y textarea */
+.contact-input {
+  width: 100%;
+  border-radius: 1rem;
+  padding: 0.75rem 1rem;
+  background-color: #f1f1f1;
+  border: none;
+  margin-bottom: 1.2rem;
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  resize: none;
+}
+
+.contact-input::placeholder {
+  color: #D9D9D9;
+}
+
+/* Botón */
+.contact-submit-btn {
+  width: 100%;
+  background-color: #133936;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding: 0.75rem;
+  border-radius: 3rem;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+.contact-submit-btn:hover {
+  background-color: #133936;
+}
+
+/* Estilo de errores */
+.text-danger {
+  font-size: 0.9rem;
+  font-family: "Poppins", sans-serif;
+}
