--- a/styles-espresso-cafe/contact.css
+++ b/styles-espresso-cafe/contact.css
@@ -1,52 +1,134 @@
-
-.contactanos {
-  position: relative;
-  padding: 40px;
-  color: whitesmoke;
-  max-height: 100vh;
-  font-size: 30px;
-  overflow: hidden;
-  z-index: 1;
-  font-family: poppins, sans-serif;
+.contact-icon {
+  color: #a5a29f;
+  font-size: 5rem;
 }
 
-.contactanos::before {
-content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
+.icon-label {
+  font-family: "Poppins", sans-serif;
+  color: #133936;
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+
+.business-name {
+  font-family: "Poppins", sans-serif;
+  color: #998F76;
+  font-size: 1.2rem;
+  text-decoration: underline;
+}
+
+
+.map-espresso {
+  border-radius: 2rem;
+}
+
+/* Formulario principal */
+.contact-form {
+  margin-top: 30px;
+  background-color: #ffffff;
+  /*el borde es para que pareca un contenedor flotante*/
+  border: solid #00000017 2px;
+  border-radius: 2rem;
+  padding: 2rem;
   width: 100%;
-  height: 100%;
-  background-image: url('/assets/granosDeCafe.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  filter: blur(1.5px) brightness(0.6);         
-  opacity: 0.90;               
-  z-index: -1;
-}
-form{
-  padding: 40px;
-
+  max-width: 643px;
+  /*quite el max-height y height para que se ajuste al contenido*/
+  box-shadow: 0px 3px 3px  rgba(0, 0, 0, 0.1);
 }
 
-.form-group label{
-  display: block;
-  font-size: 15px;
-  margin-bottom: 3px;
-  font-family: poppins, sans-serif;
-  text-align: left;
-}
-.form-group input{
-  width: 320px;
-  padding: 4px;
-  font-size: 15px;
-  color:#333;
-  font-family: poppins, sans-serif;
-  border-radius: 50px;
+
+.contact-subtitle {
+  font-family: "avigea", sans-serif;
+  font-weight: bold;
+  font-size: 2rem;
+  color: #133936;
   text-align: center;
-  margin-bottom: 4px;
+  margin-bottom: 0;
 }
-input.invalid{
-  border: 2px solid red;
-};
+
+.contact-title {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.8rem;
+  
+  color: #133936;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+
+.contact-label {
+  display: block;
+  font-family: "Poppins", sans-serif;
+  color: #133936;
+  font-weight: 600;
+  margin-bottom: 0.3rem;
+}
+
+
+.contact-input {
+  width: 100%;
+  border: 1px solid #f1f1f1;
+  border-radius: 1rem;
+  padding: 0.75rem 1rem;
+  background-color: #f1f1f1;
+  margin-bottom: 1.2rem;
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  resize: none;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.443);
+  transition: border 0.1s, box-shadow 0.1s, background-color 0.1s;
+}
+
+.contact-input::placeholder {
+  color: #333333c4;
+}
+
+
+.contact-submit-btn {
+  width: 100%;
+  background-color: #133936;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+  padding: 0.75rem;
+  border-radius: 3rem;
+  border: none;
+  transition: background-color 0.3s ease;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.443);
+}
+
+.contact-submit-btn:hover {
+  background-color: #998F76;
+  cursor: pointer;
+}
+
+/* Mensajes de error */
+.error-hint {
+  color: #AC1948;
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  text-align: left;
+  margin-top: -0.5rem;
+}
+
+/* Ocultar elementos */
+.hidden {
+  display:none;  
+}
+
+/* Estilo para campos inválidos */
+/*normalmente tambien siempre esta oculto esto le pondra el marco rojo al campo cuando sea invalido*/
+.is-invalid {
+  border: 3px solid #AC1948 ;
+  box-shadow: 0 0 5px rgba(172, 25, 72, 0.598);
+}
+/*lo llame desde el ID*/
+#Gracias {
+  padding: 40px;
+  font-family: "Poppins", sans-serif;
+  font-size: 3rem;
+  color: #133936;
+  text-align: center;
+  margin-top: 1.5rem;
+ /* Oculto por defecto */
+}
