--- a/styles-espresso-cafe/contact.css
+++ b/styles-espresso-cafe/contact.css
@@ -12,30 +12,30 @@
 
 .business-name {
   font-family: "Poppins", sans-serif;
-  color: #998F76;
+  color: #998f76;
   font-size: 1.2rem;
   text-decoration: underline;
 }
 
-
 .map-espresso {
   border-radius: 2rem;
+  padding: 1rem;
+  border: solid 2px black;
 }
 
 /* Formulario principal */
 .contact-form {
-  margin-top: 30px;
+  margin-top: 80px;
   background-color: #ffffff;
   /*el borde es para que pareca un contenedor flotante*/
   border: solid #00000017 2px;
   border-radius: 2rem;
-  padding: 2rem;
+  padding: 6rem;
   width: 100%;
   max-width: 643px;
   /*quite el max-height y height para que se ajuste al contenido*/
-  box-shadow: 0px 3px 3px  rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
 }
-
 
 .contact-subtitle {
   font-family: "avigea", sans-serif;
@@ -47,14 +47,13 @@
 }
 
 .contact-title {
-  font-family: "Poppins", sans-serif;
-  font-size: 1.8rem;
-  
+  font-family: "avigea", sans-serif;
+  font-size: 4rem;
+
   color: #133936;
   text-align: center;
   margin-bottom: 1.5rem;
 }
-
 
 .contact-label {
   display: block;
@@ -64,14 +63,13 @@
   margin-bottom: 0.3rem;
 }
 
-
 .contact-input {
   width: 100%;
-  border: 1px solid #f1f1f1;
-  border-radius: 1rem;
-  padding: 0.75rem 1rem;
-  background-color: #f1f1f1;
-  margin-bottom: 1.2rem;
+  border: 1px solid #d9d9d9;
+  border-radius: 1.2rem;
+  padding: 0.85rem 1rem;
+  background-color: #d9d9d9;
+  margin-bottom: 2rem;
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   resize: none;
@@ -79,18 +77,17 @@
   transition: border 0.1s, box-shadow 0.1s, background-color 0.1s;
 }
 
-.contact-input::placeholder {
+/* .contact-input::placeholder {
   color: #333333c4;
-}
-
+} */
 
 .contact-submit-btn {
   width: 100%;
   background-color: #133936;
   color: white;
-  font-family: "Poppins", sans-serif;
-  font-size: 1.2rem;
-  padding: 0.75rem;
+  font-family: "Poppins";
+  font-size: 3rem;
+  padding: 0.3rem;
   border-radius: 3rem;
   border: none;
   transition: background-color 0.3s ease;
@@ -98,13 +95,13 @@
 }
 
 .contact-submit-btn:hover {
-  background-color: #998F76;
+  background-color: #998f76;
   cursor: pointer;
 }
 
 /* Mensajes de error */
 .error-hint {
-  color: #AC1948;
+  color: #ac1948;
   font-size: 1rem;
   font-family: "Poppins", sans-serif;
   text-align: left;
@@ -113,13 +110,13 @@
 
 /* Ocultar elementos */
 .hidden {
-  display:none;  
+  display: none;
 }
 
 /* Estilo para campos inválidos */
 /*normalmente tambien siempre esta oculto esto le pondra el marco rojo al campo cuando sea invalido*/
 .is-invalid {
-  border: 3px solid #AC1948 ;
+  border: 3px solid #ac1948;
   box-shadow: 0 0 5px rgba(172, 25, 72, 0.598);
 }
 /*lo llame desde el ID*/
@@ -130,5 +127,5 @@
   color: #133936;
   text-align: center;
   margin-top: 1.5rem;
- /* Oculto por defecto */
+  /* Oculto por defecto */
 }
