--- a/styles-espresso-cafe/contact.css
+++ b/styles-espresso-cafe/contact.css
@@ -7,21 +7,21 @@
   font-family: "Poppins", sans-serif;
   color: #133936;
   font-weight: bold;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
 }
 
 .business-name {
   font-family: "Poppins", sans-serif;
   color: #998f76;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   text-decoration: underline;
 }
 
 .map-espresso {
   border-radius: 2rem;
-  padding: 1rem;
-  border: solid 2px black;
-}
+  border: solid #a5a29f 1px;
+ box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+ }
 
 /* Formulario principal */
 .contact-form {
@@ -49,7 +49,6 @@
 .contact-title {
   font-family: "avigea", sans-serif;
   font-size: 4rem;
-
   color: #133936;
   text-align: center;
   margin-bottom: 1.5rem;
@@ -60,6 +59,7 @@
   font-family: "Poppins", sans-serif;
   color: #133936;
   font-weight: 600;
+  font-size: 1.2rem;
   margin-bottom: 0.3rem;
 }
 
@@ -71,7 +71,7 @@
   background-color: #d9d9d9;
   margin-bottom: 2rem;
   font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   resize: none;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.443);
   transition: border 0.1s, box-shadow 0.1s, background-color 0.1s;
@@ -123,7 +123,8 @@
 #Gracias {
   padding: 40px;
   font-family: "Poppins", sans-serif;
-  font-size: 3rem;
+  font-size: 3.2rem;
+  font-weight: 600;
   color: #133936;
   text-align: center;
   margin-top: 1.5rem;
