--- a/styles-espresso-cafe/register.css
+++ b/styles-espresso-cafe/register.css
@@ -1,12 +1,15 @@
 
 .register-wrapper {
-  display: flex;
-  height: 100vh;
-  overflow: hidden;
+ display: flex;
+ height: calc(100vh - 80px); 
+ align-items: stretch;
+ overflow: hidden;
 }
 
 .register-image {
  flex: 1;
+ display: flex;
+ height: 100%;
 }
 
 .image-register {
@@ -20,16 +23,17 @@
   background-color: #fff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 0 5rem;
+  justify-content: flex-start;
+  padding: 2rem 6rem; 
 }
 
-.main-title {
+.register-title {
   font-family: "Avigea", serif;
   color: #133936;
-  font-size: 3.6rem;
+  font-size: 4rem;
   margin-bottom: 3rem;
   text-align: center;
+  margin: 1rem 0 3rem;
 }
 
 .label-name {
@@ -48,6 +52,7 @@
   font-family: "Poppins";
   font-size: 1.2rem;
   padding-left: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .button-register {
@@ -63,7 +68,7 @@
 }
 
 .button-register:hover {
-  background-color: #145d53;
+  background-color: #998F76;
 }
 
 .p-login {
