--- a/styles-espresso-cafe/home.css
+++ b/styles-espresso-cafe/home.css
@@ -1,11 +1,17 @@
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! - Home*/
+
 .mainBanner {
   position: relative;
-  height: 50vh;
-  background-image: url('/assets/Banner2.png');
+  height: 75vh;
+  background-image: url('/assets/aboutus.jpg');
   background-size: cover;
   background-position: center;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #fff;
 }
 
 .mainBanner::before {
@@ -15,12 +21,25 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0), black, #133936);
-  /* background-color:#133936; Rojo semitransparente */
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5),
+    rgba(19, 57, 54, 0.8)
+  );
   mix-blend-mode: darken;
-  /* Alternativas: overlay, screen, darken */
   pointer-events: none;
   opacity: 75%;
+  z-index: 1;
+}
+
+.mainBanner h1 {
+  position: relative;
+  z-index: 2;
+  font-family:  "Avigea";
+  font-size: 3.8rem;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+  margin-bottom: 1rem;
+  letter-spacing: 5px;
 }
 
 .carousel-inner {
