--- a/styles.css
+++ b/styles.css
@@ -126,8 +126,9 @@ img {
   font-family: "Avigea";
   text-align: center;
   color: #ffffff;
+  letter-spacing: 10px;
   font-weight: bold;
-  font-size: 4.6rem;
+  font-size: 4rem;
   letter-spacing: 0.3rem;
   z-index: 2;
 }
