--- a/styles-espresso-cafe/contact.css
+++ b/styles-espresso-cafe/contact.css
@@ -19,8 +19,8 @@
 
 .map-espresso {
   border-radius: 2rem;
-  border: solid #a5a29f 1px;
- box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  border: solid #a5a29fbd 1px;
+ box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.408);
  }
 
 /* Formulario principal */
