--- a/styles-espresso-cafe/menu2.css
+++ b/styles-espresso-cafe/menu2.css
@@ -11,7 +11,7 @@
 /* ======= General ======= */
 body {
     font-family: "Poppins", sans-serif;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
     color: #333;
