--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,11 @@ html {
 
 body {
   background-color: #FFFFFF;
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto;
 }
+
 
 img {
   max-width: 100%;
