--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ body {
   background-color: #FFFFFF;
 }
 
+main{
+  min-height: 100vh;
+}
+
 
 img {
   max-width: 100%;
@@ -225,8 +229,6 @@ a {
 
 /*!!!!!!!!!!!!!!!!!!!! Media Queries para móviles */
 
-@media (max-width: 768px) {
-
   .main-title {
     font-size: 3rem;
     text-align: center;
@@ -281,7 +283,7 @@ a {
     flex-wrap: wrap;
     gap: 0.5rem;
   }
-}
+
 
 @media (max-width: 768px) {
 
