--- a/styles-espresso-cafe/login.css
+++ b/styles-espresso-cafe/login.css
@@ -1,133 +1,139 @@
-.form-container {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-}
-.p-login {
-  font-family: "Poppins";
-  font-size: 1.2rem;
-  text-align: center;
-}
-.a-login {
-  color: #998f76;
-  font-weight: 600;
+* {
+  box-sizing: border-box;
 }
 
-.form-label {
-  font-family: "Poppins";
-  font-size: 1.6rem;
-  color: #133936;
-  font-weight: 600;
-  margin-top: 1rem;
-}
-
-.form-control {
-  width: 50rem;
-  height: 5rem;
-  border-radius: 2.5rem;
-  background-color: #a5a29f;
-  margin-top: 1rem;
-}
-
-.login-button {
-  background-color: #133936;
-  color: aliceblue;
-  width: 50rem;
-  height: 5rem;
-  border-radius: 2.5rem;
-  font-family: "Poppins";
-  font-size: 1.6rem;
-  margin-top: 1rem;
-}
-
-.login-button:hover {
-  background-color: #998f76;
-  color: aliceblue;
-  transform: scale(1.1);
-  cursor: pointer;
-}
-
-.form-check {
-  display: flex;
-  align-content: center;
-}
-
-.form-check-label {
-  font-family: "Poppins";
-  font-size: 1.1rem;
-  color: #133936;
-  margin-top: 1rem;
-  margin-left: 0.3rem;
-}
-
-.check-input {
-  margin-top: 1rem;
-  border: solid color #a5a29f;
-}
-
-.text-end {
-  font-family: "Poppins";
-  font-size: 1.1rem;
-  color: #133936;
-}
-
-.social-icons ul {
-  list-style: none;
+body {
+  margin: 0;
   padding: 0;
-  margin: 2rem 0;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
+  font-family: "Poppins", sans-serif;
+  background-image: url("/assets/Fotos/MarcoCafe.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  min-width: 100%;
 }
 
-.social-icons li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.login-icons {
-  background-color: #133936;
-  color: white;
-  font-size: 2.5rem;
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.login-icons:hover {
-  transform: scale(1.1);
-  background-color: #998f76;
-  color: aliceblue;
-  transition: transform 0.5s ease;
-}
-
-.image-social-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-
-.main-logo {
-  width: 50rem;
-  height: auto;
-}
 
 #login-container {
-  display: grid;
-  min-height: 100dvh;
-  grid-template-rows: auto 1fr auto;
-  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh;
+  min-width: 100%;
 }
 
 #login-items {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100%;
+  background-color: #ffffff;
+  border-radius: 3rem;
+  padding: 3rem;
+  width: 100%;
+  max-width: 600px;
+  box-shadow: 0 4px 6px 3px rgba(0, 0, 0, 0.217);
 }
+
+.main-title {
+  font-family: "avigea", sans-serif;
+  font-weight: 500;
+  font-size: 60px;
+  margin-bottom: 1rem; 
+  color: #133936;
+}
+
+.p-login {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.a-login {
+  color: #998f76;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.form-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.form-label {
+  font-size: 1.5rem;
+  color: #133936;
+  font-weight: bold;
+  margin-top: 1rem;
+  margin-bottom: -1px;
+
+}
+
+.form-control {
+  width: 100%;
+  max-width: 500px;
+  height: 5rem;
+  border-radius: 3rem;
+  background-color: #d9d9d9e3;
+  margin-top: 1rem;
+  box-shadow: 0px 2px 2px 1px #0000006e;
+  padding: 1rem 2rem;
+  font-size: 15px;
+  color: #313131;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-button {
+  background-color: #133936;
+  color: aliceblue;
+  width: 100%;
+  max-width: 500px;
+  height: 5rem;
+  border-radius: 3rem;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px 1px #00000041;
+  border: none;
+  transition: all 0.3s ease;
+}
+
+.login-button:hover {
+  background-color: #998f76;
+  transform: scale(1.05);
+  cursor: pointer;
+  color: aliceblue;
+}
+
+.form-check {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: 1rem;
+}
+
+.form-check-label {
+  font-size: 1.5rem;
+  color: #133936;
+  font-weight: bold;
+  margin-right: 5rem;
+
+  
+}
+
+.text-end {
+  font-size: 1.5rem;
+  color: #133936;
+  font-weight: bold;
+  margin-left: auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+
+
+
+
+
