--- a/styles-espresso-cafe/register.css
+++ b/styles-espresso-cafe/register.css
@@ -48,11 +48,12 @@
   background-color: #d9d9d9;
   width: 100%;
   height: 4.5rem;
-  border-radius: 2rem;
+  border-radius: 2.5rem;
   font-family: "Poppins";
   font-size: 1.2rem;
   padding-left: 1.5rem;
   margin-bottom: 2rem;
+  box-shadow: 0px 1px 1px 1px #0000004e;
 }
 
 .button-register {
@@ -60,11 +61,12 @@
   color: aliceblue;
   width: 100%;
   height: 4.5rem;
-  border-radius: 2rem;
+  border-radius: 2.5rem;
   font-family: "Poppins";
   font-size: 1.6rem;
   font-weight: 600;
   border: none;
+  box-shadow: 0px 1px 1px 1px #0000004e;
 }
 
 .button-register:hover {
