--- a/styles-espresso-cafe/home.css
+++ b/styles-espresso-cafe/home.css
@@ -67,13 +67,28 @@
 }
 
 .button-ordena-ahora {
-  background-color: #133936;  
+  background-color: #133936;
   color: white;
-  z-index: 10;                
-  position: relative;         
+  z-index: 10;
+  position: absolute;      
+  bottom: 30px;            
+  left: 50%;              
+  transform: translateX(-50%); 
   font-weight: bold;
-  padding: 10px 20px;
-  border-radius: 5px;
+  font-size: 1.5rem;
+  padding: 15px 30px;
+  border-radius: 8px;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+  border: 2px solid white;
+}
+.text-white{
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.25rem; 
 }
 
