boyon y texto de terminos y condicones

--- a/styles-espresso-cafe/home.css
+++ b/styles-espresso-cafe/home.css
@@ -86,9 +86,11 @@
   border: 2px solid white;
 }
 .text-white{
-    display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.25rem; 
+  font-size: 2rem;
+  font-weight: bold; 
 }
 
