añadi texto subrayado a registrate y lo hice un poco mas grande

--- a/styles-espresso-cafe/login.css
+++ b/styles-espresso-cafe/login.css
@@ -51,7 +51,8 @@ body {
 .a-login {
   color: #998f76;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 25px;
+  text-decoration: underline;
 }
 
 .form-container {
