--- a/styles-espresso-cafe/contact.css
+++ b/styles-espresso-cafe/contact.css
@@ -1,3 +1,4 @@
+
 .contact-icon {
   color: #a5a29f;
   font-size: 5rem;
@@ -25,7 +26,7 @@ box-shadow: 0px 1px 3px 2px #998f76ba;
 
 /* Formulario principal */
 .contact-form {
-  margin-top: 80px;
+  margin-top: 5rem;
   background-color: #ffffff;
   /*el borde es para que pareca un contenedor flotante*/
   border: solid #00000017 2px;
@@ -131,3 +132,13 @@ box-shadow: 0px 1px 3px 2px #998f76ba;
   margin-top: 1.5rem;
   /* Oculto por defecto */
 }
+
+@media (max-width: 1024px) {
+  .contact-form {
+    padding: 2.5rem;
+    margin: 2rem auto;
+  }
+  
+}
+
+
